data/derived/fa15/progs/unify/prog0052.ml.out
Characters 102-103:
  d::(n mod 10);;
  ^
Error: This expression has type int list
       but an expression was expected of type int
